minijinja/tests/snapshots/test_templates__vm@if_cond_else.txt.snap
---
source: minijinja/tests/test_templates.rs
expression: "&rendered"
input_file: minijinja/tests/inputs/if_cond_else.txt

---

  was false


