minijinja/tests/snapshots/test_templates__vm@ifexpr.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ 42 if something_true else 23 }}\n{{ 42 if not something_true else 23 }}\n{{ 42 if not something_true }}\n{{ (42 if not something_true) is undefined }}"
info:
  something_true: true
input_file: minijinja/tests/inputs/ifexpr.txt
---
42
23

True

