minijinja/tests/snapshots/test_templates__vm@include.txt.snap
---
source: minijinja/tests/test_templates.rs
expression: "&rendered"
input_file: minijinja/tests/inputs/include.txt
---
Before

  Hello 42 from included template!

After

