minijinja/tests/snapshots/test_templates__vm@include_ignore_choice.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "Before\n{% include [\"missing_template.txt\", template] %}\nAfter"
info:
  ctx:
    template: simple_include.txt
input_file: minijinja/tests/inputs/include_ignore_choice.txt
---
Before
Hello  from included template!
After

