minijinja/tests/snapshots/test_templates__vm@include_ignore_missing.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "Before\n{% include template ignore missing %}\nAfter"
info:
  ctx:
    template: missing_template.txt
input_file: minijinja/tests/inputs/include_ignore_missing.txt
---
Before

After

