minijinja/tests/snapshots/test_templates__vm@int_float_default_base.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "default: {{ \"n/a\"|int(7) }}, {{ \"n/a\"|int(default=7) }}, {{ [1]|int(7) }}, {{ none|int(7) }}, {{ none|int }}\nbase: {{ \"ff\"|int(0, 16) }}, {{ \"0x1f\"|int(base=16) }}, {{ \"-0X1f\"|int(base=16) }}, {{ \"0b101\"|int(base=2) }}, {{ \"0o17\"|int(base=8) }}, {{ \"zz\"|int(base=36) }}\nbase fallback: {{ \"42.7\"|int(base=16) }}, {{ \"1\"|int(base=1) }}, {{ \"1f\"|int(0, base=10) }}\nfloat: {{ \"n/a\"|float(1.5) }}, {{ \"n/a\"|float(default=2) }}, {{ none|float(1.5) }}, {{ \"2.5\"|float(0.0) }}"
info: {}
input_file: minijinja/tests/inputs/int_float_default_base.txt
---
default: 7, 7, 7, 7, 0
base: 255, 31, -31, 5, 15, 1295
base fallback: 42, 1, 0
float: 1.5, 2, 1.5, 2.5
