minijinja/tests/snapshots/test_templates__vm@list.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ [1, 2, 3]|length }}"
info:
  ctx: {}
input_file: minijinja/tests/inputs/list.txt
---
3

